samples/_failures_safe/1761266143_18ec4a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f46a8686.c: In function ‘main’:
./samples/SAFE/__tmp_f46a8686.c:128:38: error: expected ‘;’ at end of input
  128 |             for (int i = 0; i < cols1
      |                                      ^
      |                                      ;
./samples/SAFE/__tmp_f46a8686.c:128:13: error: expected declaration or statement at end of input
  128 |             for (int i = 0; i < cols1
      |             ^~~
./samples/SAFE/__tmp_f46a8686.c:128:13: error: expected declaration or statement at end of input
